# signatory-repository

./: Anchor.toml  README.md
.github/workflows/: ci-soteria.yml
programs/no-transfers/: Cargo.toml
programs/no-transfers/src/instructions/: check_transaction.rs  reclaim_transaction_check.rs  sign.rs
programs/no-transfers/tests/program_test/governance_test/: mod.rs
tests/: signatory-repository.ts
