[package]
description = "Created with Anchor"
edition = "2021"
name = "no-transfers-signatory"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "no_transfers_signatory"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.25.0", features = ["init-if-needed"]}
matches = "0.1.9"
spl-governance = {version = "3.0.0", git = "https://github.com/wizzeh/solana-program-library", branch = "mandatory-signatories", features = ["no-entrypoint"]}
spl-token = "3.3.0"

[dev-dependencies]
anchor-spl = {version = "0.25.0"}
borsh = "0.9.3"
solana-program = "^1.10.31"
solana-program-test = "^1.10.31"
solana-sdk = "^1.10.31"
spl-governance-addin-api = {version = "0.1.2"}

bincode = "1.3.2"
serde = "1.0.127"
spl-governance-addin-mock = {version = "0.1.2"}
